# itunes-library

./: .gitignore  LICENSE  README.md  license.txt  print-music-items.py  pyproject.toml  setup.py  tests.py
itunes/: .project  .pydevproject
itunes/src/: find-music-only-items.py  large-library-parse.py  setup.py  tests.py  unicode-test.py
itunes/src/itunesLibrary/: __init__.py  library.py  parser.py
itunesLibrary/: __init__.py  library.py  parser.py
sample-data/: .project  10.xml  111.xml  25.xml  empty.xml
src/itunesLibrary/: __init__.py  parser.py
tests/: tests.py
tests/sample-data/: unicode.xml
