[project]
name = "iTunesLibrary"
version = "1.2.4"
description = "itunesLibrary represents an iTunes Library."
authors = [{ name = "Steve Scholnick", email = "scholnicks@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
keywords = [
    "iTunes",
    "Apple",
    "Music",
    "Library",
    "XML",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = ["docopt-ng (>=0.9.0,<0.10.0)"]

[project.urls]
Homepage = "https://pypi.org/project/iTunesLibrary/"
Repository = "https://github.com/scholnicks/itunes-library/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/itunesLibrary"]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
